--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,6 +33,6 @@
 
 <div class="dark">
     <div class="header content clearfix">
-        <h1>{{ page.title }}</h1>
+        <h1>{{ site.title }}</h1>
     </div>
 </div>
