--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,7 @@
     <meta name="description" content="{{page.description}}">
     {% endif %}
     <meta name="viewport" content="width=device-width">
-    {% if site.css %}
-    <link rel="stylesheet" href="/css/{{site.css}}">
-    {% endif %}
+    <link rel="stylesheet" href="/css/ebd317df49f78342aaf782ebda4f98ac.css">
 </head>
 
 <body class="{% if page.body_class %}{{ page.body_class }} {% endif %}light">
