--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,7 @@
 
 <div class="dark">
     <div class="header content clearfix">
+        <img alt="" class="fl logo" height="48" width="48" src="img/logo.jpg" />
         <h1>{{ site.title }}</h1>
     </div>
 </div>
