--- a/_less/main.less
+++ b/_less/main.less
@@ -302,6 +302,10 @@ a, a:active, a:visited {
     .rounded(0.25em);
 }
 
+.logo {
+    margin: 1em 0.5em 1em 0;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
