--- a/_less/main.less
+++ b/_less/main.less
@@ -47,7 +47,7 @@ textarea {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Palatino Linotype",Palatino,Palladio,"URW Palladio L","Book Antiqua",Baskerville,"Bookman Old Style","Bitstream Charter","Nimbus Roman No9 L",Garamond,"Apple Garamond","ITC Garamond Narrow","New Century Schoolbook","Century Schoolbook","Century Schoolbook L",Georgia,serif;
     /* If standard font-size is 16px this makes it 20px. */
     font-size: 1.25em;
     line-height: @line-height;
