Use white for base0

--- a/_less/main.less
+++ b/_less/main.less
@@ -13,7 +13,7 @@
 @base02:    #f19c36;
 @base01:    #586e75;
 @base00:    #657b83;
-@base0:     #F2F2F2;
+@base0:     #FFF;
 @base1:     #FFF;
 @base2:     #eee8d5;
 @base3:     #fdf6e3;
