Add a margin to the portrait

--- a/_less/main.less
+++ b/_less/main.less
@@ -306,6 +306,10 @@ a, a:active, a:visited {
     margin: 1em 0.5em 1em 0;
 }
 
+#portrait {
+    margin: 0 0 0.5em 1em;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
