Added a subtitle including contact info and impressum

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,5 +33,8 @@
     <div class="header content clearfix">
         <img alt="" class="fl logo" height="48" width="48" src="img/logo.jpg" />
         <h1>{{ site.title }}</h1>
+        <p class="content">
+            02871 3108999 | <a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a> | <a href="impressum.html">Impressum</a>
+        </p>
     </div>
 </div>
