--- a/_less/main.less
+++ b/_less/main.less
@@ -54,7 +54,7 @@ body {
 
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection declarations have to be separate.
+ * These selection rule sets have to be separate.
  * Customize the background color to match your design.
  */
 
@@ -408,9 +408,8 @@ a, a:active, a:visited {
 }
 
 /* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   Theses examples override the primary ('mobile first') styles.
-   Modify as content requires.
+   Media Queries for Responsive Design.
+   These override the primary ('mobile first') styles.
    ========================================================================== */
 
 /* >= 481 */
@@ -462,7 +461,7 @@ a, a:active, a:visited {
 /* >= 1400 */
 @media only screen and (min-width: 1400px) {
     body {
-        /* Increase font-size for really large displays.*/
+        /* Increase font-size for really large displays. */
         font-size: 1.5em;
     }
 }
