Use em's for responsive design

--- a/_less/main.less
+++ b/_less/main.less
@@ -412,54 +412,24 @@ a, a:active, a:visited {
    These override the primary ('mobile first') styles.
    ========================================================================== */
 
-/* >= 481 */
-@media only screen and (min-width: 481px) {
+@media only screen and (min-width: 30em) {
     body {
         /* If standard font-size is 16px this makes it 20px. */
         font-size: 1.25em;
     }
-}
 
-/* >= 481 && <= 768 */
-@media only screen and (min-width: 481px) and (max-width: 768px) {
     .header, .footer, .article {
         margin: 0 2em 0 2em;
     }
 }
 
-/* <= 768 */
-@media only screen and (max-width: 768px) {
-}
-
-/* >= 769 */
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 50em) {
     .header, .footer, .article {
         margin: 0 22% 0 11%;
     }
 }
 
-/* >= 769 && <= 980 */
-@media only screen and (min-width: 769px) and (max-width: 980px) {
-}
-
-/* <= 980 */
-@media only screen and (max-width: 980px) {
-}
-
-/* >= 981 */
-@media only screen and (min-width: 981px) {
-}
-
-/* >= 981 && <= 1199 */
-@media only screen and (min-width: 981px) and (max-width: 1199px) {
-}
-
-/* >= 1200 */
-@media only screen and (min-width: 1200px) {
-}
-
-/* >= 1400 */
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 90em) {
     body {
         /* Increase font-size for really large displays. */
         font-size: 1.5em;
