--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html> <!--<![endif]-->
+{% if page.language %}{% assign language = page.language %}{% else %}{% assign language = site.language %}{% endif %}
+<!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7" lang="{{language}}"> <![endif]-->
+<!--[if IE 7]>         <html class="lt-ie9 lt-ie8" lang="{{language}}"> <![endif]-->
+<!--[if IE 8]>         <html class="lt-ie9" lang="{{language}}"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="{{language}}"> <!--<![endif]-->
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,6 +15,7 @@
     {% if page.description %}
     <meta name="description" content="{{page.description}}">
     {% endif %}
+    <meta http-equiv="Content-Language" content="{{language}}" />
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="/css/ef868959f1646358abcac6d393506f6c.css">
 </head>
