--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,20 @@
 {% include header.html %}
-<div class="article content">
+<div class="article clearfix">
+<div class="content">
 {{ content }}
 </div>
+</div>
 {% include footer.html %}
+
+{% if site.analytics_id %}
+<!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
+       mathiasbynens.be/notes/async-analytics-snippet -->
+    <script>
+        var _gaq=[['_setAccount','{{site.analytics_id}}'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+{% endif %}
+</body>
+</html>
