Remove clearfix from normal markup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-<div class="footer clearfix">
+<div class="footer">
 <p>&copy; Business English Bocholt <a href="impressum">Impressum</a></p>
 </div>
