--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 {% if page.language %}{% assign language = page.language %}{% else %}{% assign language = site.language %}{% endif %}
-<!--[if lt IE 7]>      <html class="lt-ie9 lt-ie8 lt-ie7" lang="{{language}}"> <![endif]-->
-<!--[if IE 7]>         <html class="lt-ie9 lt-ie8" lang="{{language}}"> <![endif]-->
-<!--[if IE 8]>         <html class="lt-ie9" lang="{{language}}"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="{{language}}"> <!--<![endif]-->
+<html lang="{{language}}">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
