Remove standard light body class

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
     {% endif %}
 </head>
 
-<body class="{% if page.body_class %}{{ page.body_class }} {% endif %}light">
+<body class="{% if page.body_class %}{{ page.body_class }}{% endif %}">
 
 <div class="header">
     <a id="logo" href="." title="Business English Bocholt"><img height="48" width="48" src="img/logo.jpg" /> Business English Bocholt</a>
