--- a/_less/main.less
+++ b/_less/main.less
@@ -1,4 +1,5 @@
 @import "elements.less";
+@import "helper.less";
 @import "normalize.less";
 @import "config.less";
 
@@ -86,166 +87,10 @@ textarea {
 }
 
 /* ==========================================================================
-   Chrome Frame prompt
-   ========================================================================== */
-
-#chromeframe {
-    padding: 0 (0em + @line-height);
-    margin: 0 auto;
-    color: @base3;
-    background-color: @magenta;
-}
-
-#chromeframe a,
-#chromeframe a:active,
-#chromeframe a:visited {
-    color: @base2;
-}
-
-/* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
 @import "custom.less";
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Image replacement
- */
-
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    /* IE 6/7 fallback */
-    *text-indent: -9999px;
-}
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
-
-/*
- * Hide from both screenreaders and browsers: h5bp.com/u
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-/*
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element to be focusable
- * when navigated to via the keyboard: h5bp.com/p
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screenreaders, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 42em) {
-    body {
-        /* If standard font-size is 16px this makes it 20px. */
-        font-size: 1.25em;
-    }
-}
-
-@media only screen and (min-width: 54em) {
-    .header, .footer, .article {
-        margin: 0 1em;
-    }
-}
-
-@media only screen and (min-width: 60em) {
-    .header, .footer, .article {
-        margin: 0 2em;
-    }
-}
-
-@media only screen and (min-width: 72em) {
-    .header, .footer, .article {
-        margin: 0 22% 0 11%;
-    }
-}
-
-@media only screen and (min-width: 90em) {
-    body {
-        /* Increase font-size for really large displays. */
-        font-size: 1.5em;
-    }
-}
 
 /* ==========================================================================
    Print styles.
