--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,5 @@
-<div class="nav">
-    <ul>
-        <li><a href=".">Startseite</a></li>
-        <li><a href="ueber-mich">Über mich</a></li>
-        <li><a href="kontakt">Kontakt</a></li>
-    </ul>
-</div>
+<ul class="nav">
+    <li><a href=".">Startseite</a></li>
+    <li><a href="ueber-mich">Über mich</a></li>
+    <li><a href="kontakt">Kontakt</a></li>
+</ul>
