Add body wrapper div

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,7 @@
 
 <body class="{% if page.body_class %}{{ page.body_class }}{% endif %}">
 
+<div class="body">
 <div class="header">
     <div class="logo">
         <a href="." title="Business English Bocholt"><img height="60" width="60" src="img/logo.jpg" /></a>
