Use a span for the telBox instead of a paragraph

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,10 +29,10 @@
         <img height="60" width="60" src="img/logo.jpg" />Business English Bocholt
     </a>
     <div class="telBox">
-        <p>
-            <a href="mailto:mok@abenteuer-irland.de">mok@abenteuer-irland.de</a><br />
+        <span>
+            <a href="mailto:mok@abenteuer-irland.de">mok@business-english-bocholt.de</a><br />
             +49 2871 3108999
-        </p>
+        </span>
     </div>
 {% include nav.html %}
 </div>
