Remove unused page body class

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,7 @@
     {% endif %}
 </head>
 
-<body class="{% if page.body_class %}{{ page.body_class }}{% endif %}">
-
+<body>
 <div class="body">
 <div class="header">
     <a class="logo" href="." title="Business English Bocholt">
