--- a/_less/custom.less
+++ b/_less/custom.less
@@ -75,24 +75,13 @@ a, a:active, a:visited {
     background: @base03;
 }
 
-.content {
-    max-width: 33em;
-    min-width: 15em;
-
-    word-wrap: break-word;
-}
-
 .header {
     padding: 0 (0em + @line-height);
 }
 
-.logo,
-.telBox {
-    vertical-align: middle;
-}
-
 a.logo {
     display: inline-block;
+    vertical-align: middle;
     margin: (@line-height / 2em) 0;
     color: #fff;
     text-decoration: none; 
@@ -100,6 +89,7 @@ a.logo {
 
 .telBox {
     display: none;
+    vertical-align: middle;
     font-size: (@line-height / 2em);
     padding: (@line-height / 3em);
     margin: (@line-height / 2em) 0;
@@ -128,7 +118,12 @@ a.logo {
     }
 }
 
-.article.content {
+.article {
+    max-width: 33em;
+    min-width: 15em;
+
+    word-wrap: break-word;
+
     background: #fff;
     padding: 0 (@line-height / 3em * 2);
     margin: 0 (@line-height / 3em * 2);
