--- a/css/d8ff83468518ad5b7271b172ab88f3f0.css
+++ b/css/d8ff83468518ad5b7271b172ab88f3f0.css
@@ -54,16 +54,14 @@ ol,ul{padding:0 0 0 1.5em;margin:1.5em 0;}
 ul ul,ul ol,ol ol,ol ul{margin:0;}
 a,a:active,a:visited{color:#222222;}
 .body{background:#f18400;}
-.content{max-width:33em;min-width:15em;word-wrap:break-word;}
 .header{padding:0 1.5em;}
-.logo,.telBox{vertical-align:middle;}
-a.logo{display:inline-block;margin:0.75em 0;color:#fff;text-decoration:none;}
-.telBox{display:none;font-size:0.75em;padding:0.5em;margin:0.75em 0;margin-left:4em;background-color:#eedb7d;text-align:center;-webkit-border-radius:1em;-moz-border-radius:1em;border-radius:1em;}
+a.logo{display:inline-block;vertical-align:middle;margin:0.75em 0;color:#fff;text-decoration:none;}
+.telBox{display:none;vertical-align:middle;font-size:0.75em;padding:0.5em;margin:0.75em 0;margin-left:4em;background-color:#eedb7d;text-align:center;-webkit-border-radius:1em;-moz-border-radius:1em;border-radius:1em;}
 .nav{list-style:none;padding:0;margin:0.75em 0;}.nav li{display:inline;}.nav li a{padding:0.5em;white-space:nowrap;}.nav li a:hover,.nav li a:focus{background:#f1ae5d;}
-.article.content{background:#fff;padding:0 1em;margin:0 1em;-webkit-border-radius:0.75em;-moz-border-radius:0.75em;border-radius:0.75em;}.article.content:before,.article.content:after{content:" ";display:table;}
-.article.content:after{clear:both;}
-.article.content{*zoom:1;}
-.article.content .mary{float:right;margin:0 0 0.5em 1em;width:9em;height:auto;max-width:180px;max-height:200px;}
+.article{max-width:33em;min-width:15em;word-wrap:break-word;background:#fff;padding:0 1em;margin:0 1em;-webkit-border-radius:0.75em;-moz-border-radius:0.75em;border-radius:0.75em;}.article:before,.article:after{content:" ";display:table;}
+.article:after{clear:both;}
+.article{*zoom:1;}
+.article .mary{float:right;margin:0 0 0.5em 1em;width:9em;height:auto;max-width:180px;max-height:200px;}
 .footer{text-align:center;}.footer:before,.footer:after{content:" ";display:table;}
 .footer:after{clear:both;}
 .footer{*zoom:1;}
