Add top margin to front picture

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -132,7 +132,7 @@ a.logo {
 
     .mary {
         float: right; 
-        margin: 0 0 0.5em 1em;
+        margin: 1.5em 0 0.5em 1em;
         width: 9em;
         height: auto;
         max-width: 180px;
