--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
 <div class="body">
 <div class="header">
     <a class="logo" href="." title="Business English Bocholt">
-        <img height="60" width="60" src="img/logo.jpg" />Business English Bocholt
+        <img height="60" width="60" src="img/logo.png" />Business English Bocholt
     </a>
     <div class="telBox">
         <span>
