Correct telBox margin, increase logo size

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -79,9 +79,10 @@ a, a:active, a:visited {
 }
 
 a.logo {
+    font-size: 1.25em;
     display: inline-block;
     vertical-align: middle;
-    margin: (@line-height / 2em) 0;
+    margin: (0em + @line-height / 1.25em) 0;
     color: #fff;
     text-decoration: none; 
 }
@@ -91,7 +92,7 @@ a.logo {
     vertical-align: middle;
     font-size: (@line-height / 2em);
     padding: (@line-height / 3em);
-    margin: (@line-height / 2em) 0;
+    margin: (@line-height / 3em * 2) 0;
     margin-left: 4em;
     background-color: #eedb7d;
     text-align: center;
