--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Content-Language" content="{{language}}">
     <meta name="viewport" content="width=device-width">
     <base href="{{site.url}}{{site.baseurl}}">
-    <link rel="stylesheet" href="css/1372f717fc958615dd477b937ed82b39.css">
+    <link rel="stylesheet" href="css/intermediate.css">
     {% if page.canonical %}
     <link rel="canonical" href="{{site.url}}{{site.baseurl}}{{page.canonical}}">
     {% endif %}
@@ -23,15 +23,15 @@
 
 <body>
 <div class="body">
-<div class="header">
-    <a class="logo" href="." title="Business English Bocholt">
-        <img height="60" width="60" src="img/logo.png" />Business English Bocholt
-    </a>
-    <div class="telBox">
-        <span>
-            <a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a><br />
-            +49 2871 3108999
-        </span>
-    </div>
+    <div class="header">
+        <a class="logo" href="." title="Business English Bocholt">
+            <img height="60" width="60" src="img/logo.png" />Business English Bocholt
+        </a>
+        <div class="telBox">
+            <span>
+                <a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a><br />
+                +49 2871 3108999
+            </span>
+        </div>
 {% include nav.html %}
-</div>
+    </div>
