--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Content-Language" content="{{language}}">
     <meta name="viewport" content="width=device-width">
     <base href="{{site.url}}{{site.baseurl}}">
-    <link rel="stylesheet" href="css/intermediate.css">
+    <link rel="stylesheet" href="css/e8198ef4b58a3a338c6c1b89841cfaac.css">
     {% if page.canonical %}
     <link rel="canonical" href="{{site.url}}{{site.baseurl}}{{page.canonical}}">
     {% endif %}
