--- a/css/e8198ef4b58a3a338c6c1b89841cfaac.css
+++ b/css/e8198ef4b58a3a338c6c1b89841cfaac.css
@@ -55,8 +55,8 @@ ul ul,ul ol,ol ol,ol ul{margin:0}
 a,a:active,a:visited{color:#222}
 .body{background:#f18400}
 .header{padding:0 1.5em}
-a.logo{display:inline-block;vertical-align:middle;margin:.75em 0;color:#fff;text-decoration:none}
-.telBox{display:none;vertical-align:middle;font-size:.75em;padding:.5em;margin:.75em 0;margin-left:4em;background-color:#eedb7d;text-align:center;-webkit-border-radius:1em;-moz-border-radius:1em;border-radius:1em}
+a.logo{font-size:1.25em;display:inline-block;vertical-align:middle;margin:.6em 0;color:#fff;text-decoration:none}
+.telBox{display:none;vertical-align:middle;font-size:.75em;padding:.5em;margin:1em 0;margin-left:4em;background-color:#eedb7d;text-align:center;-webkit-border-radius:1em;-moz-border-radius:1em;border-radius:1em}
 .nav{list-style:none;padding:0;margin:.75em 0}.nav li{display:inline}.nav li a{padding:.5em;white-space:nowrap}.nav li a:hover,.nav li a:focus{background:#f1ae5d}
 .article{max-width:33em;min-width:15em;word-wrap:break-word;background:#fff;padding:0 1em;margin:0 1em;-webkit-border-radius:.75em;-moz-border-radius:.75em;border-radius:.75em;}.article:before,.article:after{content:" ";display:table;}
 .article:after{clear:both}
