--- a/_less/custom.less
+++ b/_less/custom.less
@@ -82,7 +82,7 @@ a.logo {
     font-size: 1.25em;
     display: inline-block;
     vertical-align: middle;
-    margin: (0em + @line-height / 2.5em) 0;
+    margin: (@line-height / 2.5em) 0;
     color: #fff;
     text-decoration: none; 
 }
@@ -102,7 +102,7 @@ a.logo {
 .nav {
     list-style: none;
     padding: 0;
-    margin: (0em + @line-height) / 2 0;
+    margin: @line-height / 2em 0;
 
     li {
         display: inline;
