Use inline-block for navigation li's

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -105,7 +105,7 @@ a.logo {
     margin: @line-height / 2em 0;
 
     li {
-        display: inline;
+        display: inline-block;
 
         a {
             padding: @line-height / 3em;
