Reduce top/bottom padding by half

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -108,7 +108,7 @@ a.logo {
         display: inline-block;
 
         a {
-            padding: @line-height / 3em;
+            padding: @line-height / 6em @line-height / 3em;
             white-space: nowrap;
 
             &:hover, &:focus {
