--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,13 +25,11 @@
 <div class="body">
     <div class="header">
         <a class="logo" href="." title="Business English Bocholt">
-            <img height="60" width="60" src="img/logo.png" />Business English Bocholt
+            <img height="60" width="60" src="img/logo.png">Business English Bocholt
         </a>
         <div class="telBox">
-            <span>
-                <a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a><br />
-                +49 2871 3108999
-            </span>
+            <p><a href="mailto:mok@business-english-bocholt.de">mok@business-english-bocholt.de</a></p>
+            <p>+49 2871 3108999</p>
         </div>
 {% include nav.html %}
     </div>
