--- a/_less/custom.less
+++ b/_less/custom.less
@@ -102,13 +102,13 @@ a.logo {
 .nav {
     list-style: none;
     padding: 0;
-    margin: @line-height / 2em 0;
+    margin: (@line-height / 2em) 0;
 
     li {
         display: inline-block;
 
         a {
-            padding: @line-height / 6em @line-height / 3em;
+            padding: (@line-height / 6em) (@line-height / 3em);
             white-space: nowrap;
 
             &:hover, &:focus {
@@ -125,8 +125,8 @@ a.logo {
     word-wrap: break-word;
 
     background: #fff;
-    padding: 0 (@line-height / 3em * 2);
-    margin: 0 (@line-height / 3em * 2);
+    padding: 0 (@line-height / 1.5em);
+    margin: 0 (@line-height / 1.5em);
     .rounded(@line-height / 2em);
     .clearfix();
 
