Increase font size of telBox a little and make it exactly 60px high on 16px standard font size

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -90,13 +90,17 @@ a.logo {
 .telBox {
     display: none;
     vertical-align: middle;
-    font-size: (@line-height / 2em);
-    padding: (@line-height / 3em);
-    margin: (@line-height / 3em * 2) 0;
+    font-size: 0.8em;
+    padding: 0.375em;
+    margin: 0.9375em 0;
     margin-left: 4em;
     background-color: #eedb7d;
     text-align: center;
     .rounded(1em);
+
+    p {
+        margin: 0;
+    }
 }
 
 .nav {
